# atb

./: Cargo.toml  GEMINI.md  README.md
.codex/: config.toml  toolkit.yaml
plans/feature-1/: PLAN.md
plans/feature-1/phase-1/: TASK-1-1.md  TASK-1-2.md  TASK-1-3.md
plans/feature-1/phase-2/: TASK-2-1.md  TASK-2-3.md
plans/feature-1/phase-4/: TASK-4-2.md
plans/feature-1/phase-5/: TASK-5-2.md
plans/feature-10/: DESIGN.md
plans/feature-11/: DESIGN.md  PLAN.md
plans/feature-12/: DESIGN.md  PLAN.md
plans/feature-14/: DESIGN.md  PLAN.md
plans/feature-15/: PLAN.md
plans/feature-17/: PLAN.md
plans/feature-18/: DESIGN.md  PLAN.md
plans/feature-2/: PLAN.md
plans/feature-3/: DESIGN.md
scripts/: install.sh  uninstall.sh
specs/: design.md  format.md  model.md  prd.md  spec.md
src/: main.rs
src/app/: README.md  cli.rs  config.rs  context.rs  mod.rs
src/builder/: README.md  dependency.rs  emitter.rs  mod.rs
src/core/: README.md  constants.rs  filter.rs  resource.rs  target.rs
src/loader/: README.md  mod.rs  parser.rs
src/syncer/: README.md  mod.rs  patcher.rs
src/transformer/: README.md  codex.rs  default.rs  gemini.rs  mod.rs
src/utils/: yaml.rs
tests/: app_integration_test.rs  cli_test.rs  e2e_build_test.rs  e2e_codex_sync_test.rs  e2e_dependency_test.rs  e2e_path_split_test.rs  e2e_skill_extras_test.rs  e2e_sync_multiline_test.rs  e2e_sync_test.rs  metadata_map_test.rs  repro_missing_resource_test.rs
tests/fixtures/: atb.yaml
tracks/codex-commands/: plan.md  spec.md  task-1-1.md  task-1-2.md  task-2-1.md  task-3-1.md
(+47 files in other folders)
